Updated image search form to img search; changed bgcolor; fix overflow to remove scroll; added back button

--- a/Projects/project-0-search/styles/style.scss
+++ b/Projects/project-0-search/styles/style.scss
@@ -1,4 +1,4 @@
-$background-color: #1a1c1d;
+$background-color: #202124;
 $button-border-color: #26292a;
 $text-color: #F0F0F4;
 $border-color: #454a4d;
@@ -25,7 +25,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
-    height: 100vh;
+    height: 95vh;
 }
 
 svg {
